# sast-link-backend-cpp

./: .gitmodules  CMakeLists.txt  captcha.html  main.cpp  sast_link.qrc  settings.json
include/: account_exist.h  data_structures.h  fake_sql.h  handler.h  json_deserialiser.hpp  login.h  logout.h  mail.h  oauth.h  register.h  response.h  server.h  sql.h  thread_pool.h  token_manager.h
src/: account_exist.cpp  handler.cpp  login.cpp  logout.cpp  mail.cpp  oauth.cpp  register.cpp  response.cpp  sql.cpp  thread_pool.cpp
